--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "typescript": "^5.6.3",
+    "vite": "^5.4.11",
     "vue-cli-plugin-vuetify": "~2.5.8"
   }
 }
