--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#api
 __pycache__/
 *.py[cod]
 *$py.class
@@ -6,7 +7,10 @@ env/
 .env
 *.env
 *.db
-*.sqlite3.DS_Store
+*.sqlite3
+
+#ui
+.DS_Store
 node_modules
 /dist
 
